public interface Observer {
  public void update(); //suma 1 ticks a tasca
}
