@startuml
'https://plantuml.com/class-diagram

abstract class Node
class Task
class Client
class Project
interface Observer
abstract class Observable
class Clock

Node <|- Task
Node <|-- Project
Client -o Project
Project o-- Node
Clock  --|> Observable
Task  ..|> Observer

class Project {
    -totalTime : double
    +CreateNewTask()
    +CreateNewSubProject()
}

abstract class Node {
    -nombre : string
    -startTime : time
    -startDate : date
    -endTime : time
    -endDate : date
    -workingTime : double
    +calculateTotalTime()
}

class Task {
    -taskType : int
}

class Client {
    +CreateNewProject()
}
interface Observer{
    +Update()

}
class Clock{
    -timer : Timer
    -dateTime : DateTime
    +startTimer()
    -tick()
}

abstract class Observable{
    +addObserver (ob: Observer)
    +deleteObserver (ob: Observer)
    +setChanged()
    +notifyObservers(arg0: Observable, arg1: Object)
}

@enduml